# safe-luggage

./: README.md  notifications.py  pyproject.toml  recording_2024-05-19_06-20-14.avi
Presentation/: presentation.md
Raport/: .RData  .Rhistory  luggage-raport.Rmd  luggage-raport.html
luggage-detection/: main.py  main2.py  rcnn.py
