[tool.poetry]
name = "safe-luggage"
version = "0.1.0"
description = ""
authors = ["bafaurazan <rafalbe777@gmail.com>"]
readme = "README.md"
packages = [{include = "luggage-detection"}]

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.17"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
